--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <section id="expositores" class="section expositores-section">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Expositores</h2>
+                <h2 class="section-title">Expositore</h2>
                 <p class="section-subtitle">Conheça os expositores que estarão presentes na FEPRO 2026</p>
             </div>
             <div class="expositores-grid">
