chore: change card to be a link and change background hover from btn-secondary

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     <p class="expositor-desc">A sua casa merece o melhor</p>
                     <div class="expositor-category">Móveis</div>
                 </a>
-                <a href="https://www.instagram.com/pimentadecheirofitness/" class="expositor-card" target="_blank" rel="nonoopener noreferrer"> 
+                <a href="https://www.instagram.com/pimentadecheirofitness/" class="expositor-card" target="_blank" rel="nonoopener noreferrer">
                     <img src="images/PimentaDeCheiroLogo.png" alt="Pimenta de Cheiro Logo" class="expositor-logo">
                     <h3 class="expositor-name">Pimenta de Cheiro</h3>
                     <p class="expositor-desc">Roupa fitness feminina para todo tipo de mulher</p>
@@ -295,30 +295,30 @@
                 <p class="section-subtitle">Agradecemos aos nossos patrocinadores pelo apoio</p>
             </div>
             <div class="patrocinadores-grid">
-                <div class="patrocinador-card">
+                <a href="https://www.instagram.com/sebrae/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="patrocinador-logo">
-                        <img src="images/SebraeLogo.png" alt="Sebrae" width="100%"> 
+                    <img src="images/SebraeLogo.png" alt="Sebrae" width="100%">
                     </div>
                     <h3 class="patrocinador-tier">Sebrae</h3>
-                </div>
-                <div class="patrocinador-card">
+                </a>
+                <a href="https://www.instagram.com/energisa/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="patrocinador-logo">
-                        <img src="images/EnergisaLogo.png" alt="Energisa" width="100%"> 
+                        <img src="images/EnergisaLogo.png" alt="Energisa" width="100%">
                     </div>
                     <h3 class="patrocinador-tier">Energisa</h3>
-                </div>
-                <div class="patrocinador-card">
+                </a>
+                <a href="https://www.instagram.com/acianf/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="patrocinador-logo">
-                        <img src="images/AcianfLogo.png" alt="Acianf" width="100%"> 
+                        <img src="images/AcianfLogo.png" alt="Acianf" width="100%">
                     </div>
                     <h3 class="patrocinador-tier">Acianf</h3>
-                </div>
-                <div class="patrocinador-card">
+                </a>
+                <a href="https://www.instagram.com/unimedserranarj/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="patrocinador-logo">
-                        <img src="images/UnimedLogo.png" alt="Unimed" width="100%"> 
+                        <img src="images/UnimedLogo.png" alt="Unimed" width="100%">
                     </div>
                     <h3 class="patrocinador-tier">Unimed</h3>
-                </div>
+                </a>
             </div>
         </div>
     </section>
