chore: change expositors text

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             </div>
             <div class="hero-stats">
                 <div class="stat-card">
-                    <div class="stat-number">80+</div>
-                    <div class="stat-label">Expositores</div>
+                    <div class="stat-number">100+</div>
+                    <div class="stat-label">Estandes</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-number">1000+</div>
@@ -363,7 +363,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Expositores</h2>
-                <p class="section-subtitle">Conheça os expositores que estarão presentes na FEPRO 2026</p>
+                <p class="section-subtitle">Conheça alguns dos nossos expositores que estarão presentes na FEPRO 2026</p>
             </div>
             <div class="expositores-grid">
                 <a href="https://www.instagram.com/bazaropcao/" class="expositor-card" target="_blank" rel="nonoopener noreferrer">
