--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FEPRO 2026 - Feira da Promoção Nova Friburgo</title>
-    <link rel="icon" href="images/FeproLogo.jpg" type="image/jpg">
+    <link rel="icon" href="images/FeproFavIcon.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
@@ -21,8 +21,10 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <div class="logo">
-                        <a href="#home">FEPRO <span>2026</span></a>
-                    </div>
+                        <a href="#home">
+                            <img src="images/FeproLogo.png" alt="FEPRO 2026" class="logo-img">
+                        </a>
+                    </div>                    
                     <button class="mobile-menu-toggle" aria-label="Toggle menu">
                         <span></span>
                         <span></span>
