chore: refactor navigation

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                         <a href="#home">
                             <img src="images/FeproLogo.png" alt="FEPRO 2026" class="logo-img">
                         </a>
-                    </div>                    
+                    </div>
                     <button class="mobile-menu-toggle" aria-label="Toggle menu">
                         <span></span>
                         <span></span>
                         <span></span>
                     </button>
                     <ul class="nav-menu">
-                        <li><a href="#home" class="nav-link active">Sobre o Evento</a></li>
+                        <li><a href="#sobre" class="nav-link active">Sobre o Evento</a></li>
                         <li><a href="#horarios" class="nav-link">Horários</a></li>
                         <li><a href="#programacao" class="nav-link">Programação</a></li>
                         <li><a href="#expositores" class="nav-link">Expositores</a></li>
@@ -44,12 +44,12 @@
     </header>
 
     <!-- Hero Section / Home -->
-    <section id="background" class="section background-section">
+    <section id="home" class="section background-section">
         <div class="container">
         </div>
     </section>
 
-    <section id="home" class="section hero-section">
+    <section id="sobre" class="section hero-section">
         <div class="container">
             <div class="hero-content">
                 <section class="section-header">
