fix: fixed whatsapp number

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span></span>
                     </button>
                     <ul class="nav-menu">
-                        <li><a href="#sobre" class="nav-link active">Sobre o Evento</a></li>
+                        <li><a href="#sobre" class="nav-link active">Sobre o evento</a></li>
                         <li><a href="#horarios" class="nav-link">Horários</a></li>
                         <li><a href="#programacao" class="nav-link">Programação</a></li>
                         <li><a href="#expositores" class="nav-link">Expositores</a></li>
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="hero-content">
                 <section class="section-header">
-                    <h2 class="section-title">Sobre o Evento</h2>
+                    <h2 class="section-title">Sobre o evento</h2>
                     <p class="section-subtitle">FEPRO - Feira da Promoção de Nova Friburgo</p>
                 </section>
                 <p class="hero-description">
@@ -530,7 +530,7 @@
                             <i class="fab fa-facebook-f"></i>
                         </a>
                     
-                        <a href="https://wa.me/552225224969" target="_blank" aria-label="WhatsApp" rel="nonoopener noreferrer">
+                        <a href="https://wa.me/5522988292912/" target="_blank" aria-label="WhatsApp" rel="nonoopener noreferrer">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>                    
