chore: add new partners and add lock overlay on map section

--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
     <section id="patrocinadores" class="patrocinadores section">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Patrocinadores</h2>
-                <p class="section-subtitle">Agradecemos aos nossos patrocinadores pelo apoio</p>
+                <h2 class="section-title">Apoiadores</h2>
+                <p class="section-subtitle">Agradecemos aqueles que fazem o evento acontecer</p>
             </div>
             <div class="patrocinadores-grid">
                 <a href="https://www.instagram.com/sebrae/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
@@ -427,23 +427,71 @@
                     </div>
                     <h3 class="patrocinador-tier">Sebrae</h3>
                 </a>
-                <a href="https://www.instagram.com/energisa/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/acianf/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="patrocinador-logo">
-                        <img src="images/EnergisaLogo.png" alt="Energisa" width="100%">
+                        <img src="images/AcianfLogo.png" alt="Acianf" width="100%">
                     </div>
-                    <h3 class="patrocinador-tier">Energisa</h3>
+                    <h3 class="patrocinador-tier">Acianf</h3>
                 </a>
-                <a href="https://www.instagram.com/sicredi/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/frionline/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="patrocinador-logo">
-                        <img src="images/SicrediLogo.png" alt="Sicredi" width="100%">
+                        <img src="images/FriOnlineLogo.png" alt="Fri Online" width="100%">
                     </div>
-                    <h3 class="patrocinador-tier">Sicredi</h3>
+                    <h3 class="patrocinador-tier">Fri Online</h3>
                 </a>
                 <a href="https://www.instagram.com/unimedserranarj/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="patrocinador-logo">
                         <img src="images/UnimedLogo.png" alt="Unimed" width="100%">
                     </div>
                     <h3 class="patrocinador-tier">Unimed</h3>
+                </a>
+                <a href="https://www.instagram.com/novafriburgodestino/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="patrocinador-logo">
+                        <img src="images/ConventionLogo.png" alt="Convention" width="100%">
+                    </div>
+                    <h3 class="patrocinador-tier">Convention</h3>
+                </a>
+                <a href="https://www.instagram.com/novafriburgodestino/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="patrocinador-logo">
+                        <img src="images/InterTvLogo.png" alt="Convention" width="100%">
+                    </div>
+                    <h3 class="patrocinador-tier">InterTV</h3>
+                </a>
+                <a href="https://www.instagram.com/friburgofm/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="patrocinador-logo">
+                        <img src="images/RadioFriburgoLogo.png" alt="Radio Friburgo" width="100%">
+                    </div>
+                    <h3 class="patrocinador-tier">Friburgo FM</h3>
+                </a>
+                <a href="https://www.instagram.com/concessionariarota116/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="patrocinador-logo">
+                        <img src="images/Rota116Logo.png" alt="Rota 116" width="100%">
+                    </div>
+                    <h3 class="patrocinador-tier">Rota 116</h3>
+                </a>
+                <a href="https://www.instagram.com/faol_oficial/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="patrocinador-logo">
+                        <img src="images/FaolLogo.svg" alt="FAOL" width="100%">
+                    </div>
+                    <h3 class="patrocinador-tier">FAOL</h3>
+                </a>
+                <a href="https://www.instagram.com/rg.criativa/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="patrocinador-logo">
+                        <img src="images/RgDigitalLogo.png" alt="RG CRIATIVA" width="100%">
+                    </div>
+                    <h3 class="patrocinador-tier">RG Criativa</h3>
+                </a>
+                <a href="https://www.instagram.com/prefeituranovafriburgo/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="patrocinador-logo">
+                        <img src="images/PrefeituraLogo.png" alt="PMNF" width="100%">
+                    </div>
+                    <h3 class="patrocinador-tier">PMNF</h3>
+                </a>
+                <a href="https://www.instagram.com/nfcountryclube/" class="patrocinador-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="patrocinador-logo">
+                        <img src="images/NfccLogo.png" alt="NFCC" width="100%">
+                    </div>
+                    <h3 class="patrocinador-tier">NFCC</h3>
                 </a>
             </div>
         </div>
@@ -457,40 +505,47 @@
                 <p class="section-subtitle">Localize-se facilmente durante o evento</p>
             </div>
             <div class="mapa-content">
-                <div class="mapa-container">
+                <div class="mapa-container mapa-locked">
                     <div class="mapa-placeholder">
+                        <!-- aqui entra o mapa futuramente -->
+                    </div>
+            
+                    <div class="lock-overlay">
+                        <span class="lock-icon">🔒</span>
+                        <span class="lock-text">Mapa em breve</span>
                     </div>
                 </div>
+            
                 <div class="mapa-legend-list">
                     <h3>Locais do Evento</h3>
                     <ul class="legend-items">
                         <li>
                             <span class="legend-color" style="background: #00a8eb;"></span>
-                            <span>Auditório Principal</span>
+                            <span>Entrada</span>
                         </li>
                         <li>
                             <span class="legend-color" style="background: #fee612;"></span>
-                            <span>Área de Exposição</span>
+                            <span>Encontro Regional de Turismo</span>
                         </li>
                         <li>
                             <span class="legend-color" style="background: #44a03d;"></span>
-                            <span>Auditório A</span>
-                        </li>
-                        <li>
-                            <span class="legend-color" style="background: #e26f2c;"></span>
-                            <span>Sala B</span>
-                        </li>
-                        <li>
-                            <span class="legend-color" style="background: #fc9d79;"></span>
-                            <span>Área de Networking</span>
+                            <span>Fepro | Corredor</span>
                         </li>
                         <li>
                             <span class="legend-color" style="background: #e32160;"></span>
-                            <span>Alimentação</span>
+                            <span>Fepro Salão Mix</span>
+                        </li>
+                        <li>
+                            <span class="legend-color" style="background: #e26f2c;"></span>
+                            <span>Praça de Alimentação</span>
+                        </li>
+                        <li>
+                            <span class="legend-color" style="background: #fc9d79;"></span>
+                            <span>Salão Noivas e Festas</span>
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div>            
         </div>
     </section>
 
