fix: fixed responsive problems and import new images with high quality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-wrapper">
-                    <div class="logo">
+                    <div>
                         <a href="#home">
                             <img src="images/FeproLogo.png" alt="FEPRO 2026" class="logo-img">
                         </a>
@@ -43,10 +43,8 @@
         </nav>
     </header>
 
-    <!-- Hero Section / Home -->
-    <section id="home" class="section background-section">
-        <div class="container">
-        </div>
+    <!-- Banner Section / Home -->
+    <section id="home" class="section banner-section">
     </section>
 
     <section id="sobre" class="section hero-section">
@@ -374,25 +372,25 @@
             </div>
             <div class="expositores-grid">
                 <a href="https://www.instagram.com/bazaropcao/" class="expositor-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="images/BazarOpcaoLogo.png" alt="Bazar Opção Logo" class="expositor-logo">
+                    <img src="images/BazarOpcaoLogo.jpg" alt="Bazar Opção Logo" class="expositor-logo">
                     <h3 class="expositor-name">Bazar Opção</h3>
                     <p class="expositor-desc">Utilidades, decoração, brinquedos e papelaria</p>
                     <div class="expositor-category">Casa</div>
                 </a>
                 <a href="https://www.instagram.com/courodaserranf/" class="expositor-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="images/CouroDaSerraLogo.png" alt="Couro da Serra Logo" class="expositor-logo">
+                    <img src="images/CouroDaSerraLogo.jpg" alt="Couro da Serra Logo" class="expositor-logo">
                     <h3 class="expositor-name">Couro da Serra</h3>
                     <p class="expositor-desc">Autenticidade, textura e estilo em cada modelo</p>
                     <div class="expositor-category">Acessórios</div>
                 </a>
                 <a href="https://www.instagram.com/oculoscoyote/" class="expositor-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="images/CoyoteLogo.png" alt="Coyote Logo" class="expositor-logo">
+                    <img src="images/CoyoteLogo.jpg" alt="Coyote Logo" class="expositor-logo">
                     <h3 class="expositor-name">Coyote</h3>
                     <p class="expositor-desc">Inovando o conceito de ótica há 40 anos</p>
                     <div class="expositor-category">Saúde</div>
                 </a>
                 <a href="https://www.instagram.com/d33d_auto/" class="expositor-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="images/D33dLogo.png" alt="D33D Logo" class="expositor-logo">
+                    <img src="images/D33dLogo.jpg" alt="D33D Logo" class="expositor-logo">
                     <h3 class="expositor-name">D33D</h3>
                     <p class="expositor-desc">Do básico ao inteligente</p>
                     <div class="expositor-category">Tecnologia</div>
@@ -404,7 +402,7 @@
                     <div class="expositor-category">Móveis</div>
                 </a>
                 <a href="https://www.instagram.com/pimentadecheirofitness/" class="expositor-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="images/PimentaDeCheiroLogo.png" alt="Pimenta de Cheiro Logo" class="expositor-logo">
+                    <img src="images/PimentaDeCheiroLogo.jpg" alt="Pimenta de Cheiro Logo" class="expositor-logo">
                     <h3 class="expositor-name">Pimenta de Cheiro</h3>
                     <p class="expositor-desc">Roupa fitness feminina para todo tipo de mulher</p>
                     <div class="expositor-category">Moda</div>
