chore: adding menu overlay from mobile nav-menu

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         </nav>
     </header>
 
+    <div class="menu-overlay" id="menuOverlay"></div>
+
     <!-- Banner Section / Home -->
     <section id="home" class="section banner-section">
     </section>
