chore: refactor images folder and add new images with high quality

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FEPRO 2026 - Feira da Promoção Nova Friburgo</title>
-    <link rel="icon" href="images/FeproFavIcon.png" type="image/png">
+    <link rel="icon" href="assets/fepro/FeproFavIcon.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
@@ -22,7 +22,7 @@
                 <div class="nav-wrapper">
                     <div>
                         <a href="#home">
-                            <img src="images/FeproLogo.png" alt="FEPRO 2026" class="logo-img">
+                            <img src="assets/fepro/FeproLogo.png" alt="FEPRO 2026" class="logo-img">
                         </a>
                     </div>
                     <button class="mobile-menu-toggle" aria-label="Toggle menu">
@@ -63,7 +63,7 @@
                     compras a preços mais baixos que os do mercado tradicional
                 </p>
                 <div class="about-buttons">
-                    <a href="#programacao" class="btn btn-primary">Ver Programação</a>
+                    <a href="#agenda" class="btn btn-primary">Ver Programação</a>
                     <a href="#exhibitors" class="btn btn-secondary">Conheça os Expositores</a>
                 </div>
             </div>
@@ -374,37 +374,37 @@
             </div>
             <div class="exhibitors-grid">
                 <a href="https://www.instagram.com/bazaropcao/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="images/BazarOpcaoLogo.jpg" alt="Bazar Opção Logo" class="exhibitors-logo">
+                    <img src="assets/exhibitors/BazarOpcaoLogo.jpg" alt="Bazar Opção Logo" class="exhibitors-logo">
                     <h3 class="exhibitors-name">Bazar Opção</h3>
                     <p class="exhibitors-desc">Utilidades, decoração, brinquedos e papelaria</p>
                     <div class="exhibitors-category">Casa</div>
                 </a>
                 <a href="https://www.instagram.com/courodaserranf/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="images/CouroDaSerraLogo.jpg" alt="Couro da Serra Logo" class="exhibitors-logo">
+                    <img src="assets/exhibitors/CouroDaSerraLogo.jpg" alt="Couro da Serra Logo" class="exhibitors-logo">
                     <h3 class="exhibitors-name">Couro da Serra</h3>
                     <p class="exhibitors-desc">Autenticidade, textura e estilo em cada modelo</p>
                     <div class="exhibitors-category">Acessórios</div>
                 </a>
                 <a href="https://www.instagram.com/oculoscoyote/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="images/CoyoteLogo.jpg" alt="Coyote Logo" class="exhibitors-logo">
+                    <img src="assets/exhibitors/CoyoteLogo.jpg" alt="Coyote Logo" class="exhibitors-logo">
                     <h3 class="exhibitors-name">Coyote</h3>
                     <p class="exhibitors-desc">Inovando o conceito de ótica há 40 anos</p>
                     <div class="exhibitors-category">Saúde</div>
                 </a>
                 <a href="https://www.instagram.com/d33d_auto/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="images/D33dLogo.jpg" alt="D33D Logo" class="exhibitors-logo">
+                    <img src="assets/exhibitors/D33dLogo.jpg" alt="D33D Logo" class="exhibitors-logo">
                     <h3 class="exhibitors-name">D33D</h3>
                     <p class="exhibitors-desc">Do básico ao inteligente</p>
                     <div class="exhibitors-category">Tecnologia</div>
                 </a>
                 <a href="https://www.instagram.com/espacodecormoveis/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="images/EspacoDecorLogo.jpg" alt="Espaço Decor Logo" class="exhibitors-logo">
+                    <img src="assets/exhibitors/EspacoDecorLogo.jpg" alt="Espaço Decor Logo" class="exhibitors-logo">
                     <h3 class="exhibitors-name">Espaço Decor</h3>
                     <p class="exhibitors-desc">A sua casa merece o melhor</p>
                     <div class="exhibitors-category">Móveis</div>
                 </a>
                 <a href="https://www.instagram.com/pimentadecheirofitness/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="images/PimentaDeCheiroLogo.jpg" alt="Pimenta de Cheiro Logo" class="exhibitors-logo">
+                    <img src="assets/exhibitors/PimentaDeCheiroLogo.jpg" alt="Pimenta de Cheiro Logo" class="exhibitors-logo">
                     <h3 class="exhibitors-name">Pimenta de Cheiro</h3>
                     <p class="exhibitors-desc">Roupa fitness feminina para todo tipo de mulher</p>
                     <div class="exhibitors-category">Moda</div>
@@ -423,75 +423,81 @@
             <div class="partners-grid">
                 <a href="https://www.instagram.com/sebrae/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                    <img src="images/SebraeLogo.png" alt="Sebrae" width="100%">
+                    <img src="assets/partners/SebraeLogo.png" alt="Sebrae" width="100%">
                     </div>
                     <h3 class="partners-tier">Sebrae</h3>
                 </a>
                 <a href="https://www.instagram.com/acianf/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="images/AcianfLogo.png" alt="Acianf" width="100%">
+                        <img src="assets/partners/AcianfLogo.png" alt="ACIANF" width="100%">
                     </div>
-                    <h3 class="partners-tier">Acianf</h3>
+                    <h3 class="partners-tier">ACIANF</h3>
                 </a>
                 <a href="https://www.instagram.com/frionline/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="images/FriOnlineLogo.png" alt="Fri Online" width="100%">
+                        <img src="assets/partners/FriOnlineLogo.png" width="100%">
                     </div>
                     <h3 class="partners-tier">Fri Online</h3>
                 </a>
                 <a href="https://www.instagram.com/unimedserranarj/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="images/UnimedLogo.png" alt="Unimed" width="100%">
+                        <img src="assets/partners/UnimedLogo.png" alt="Unimed" width="100%">
                     </div>
                     <h3 class="partners-tier">Unimed</h3>
                 </a>
                 <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="images/ConventionLogo.png" alt="Convention" width="100%">
+                        <img src="assets/partners/ConventionLogo.png" alt="Convention" width="100%">
                     </div>
                     <h3 class="partners-tier">Convention</h3>
                 </a>
                 <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="images/InterTvLogo.png" alt="Convention" width="100%">
+                        <img src="assets/partners/InterTvLogo.webp" alt="Convention" width="100%">
                     </div>
                     <h3 class="partners-tier">InterTV</h3>
                 </a>
                 <a href="https://www.instagram.com/friburgofm/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="images/RadioFriburgoLogo.png" alt="Radio Friburgo" width="100%">
+                        <img src="assets/partners/FriburgoFmLogo.webp" alt="Friburgo FM" width="100%">
                     </div>
                     <h3 class="partners-tier">Friburgo FM</h3>
                 </a>
                 <a href="https://www.instagram.com/concessionariarota116/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="images/Rota116Logo.png" alt="Rota 116" width="100%">
+                        <img src="assets/partners/Rota116Logo.png" alt="Rota 116" width="100%">
                     </div>
                     <h3 class="partners-tier">Rota 116</h3>
                 </a>
                 <a href="https://www.instagram.com/faol_oficial/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="images/FaolLogo.svg" alt="FAOL" width="100%">
+                        <img src="assets/partners/FaolLogo.svg" alt="FAOL" width="100%">
                     </div>
                     <h3 class="partners-tier">FAOL</h3>
                 </a>
                 <a href="https://www.instagram.com/rg.criativa/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="images/RgDigitalLogo.png" alt="RG CRIATIVA" width="100%">
+                        <img src="assets/partners/RgCriativaLogo.svg" alt="RG Criativa" width="100%">
                     </div>
                     <h3 class="partners-tier">RG Criativa</h3>
                 </a>
                 <a href="https://www.instagram.com/prefeituranovafriburgo/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="images/PrefeituraLogo.png" alt="PMNF" width="100%">
+                        <img src="assets/partners/PrefeituraLogo.jpg" alt="PMNF" width="100%">
                     </div>
-                    <h3 class="partners-tier">PMNF</h3>
+                    <h3 class="partners-tier">Prefeitura de Nova Friburgo</h3>
                 </a>
                 <a href="https://www.instagram.com/nfcountryclube/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="images/NfccLogo.png" alt="NFCC" width="100%">
+                        <img src="assets/partners/NfccLogo.png" alt="NFCC" width="100%">
                     </div>
-                    <h3 class="partners-tier">NFCC</h3>
+                    <h3 class="partners-tier">Country Clube</h3>
+                </a>
+                <a href="https://www.instagram.com/facerj_/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo">
+                        <img src="assets/partners/FacerjLogo.png" alt="FACERJ" width="100%">
+                    </div>
+                    <h3 class="partners-tier">FACERJ</h3>
                 </a>
             </div>
         </div>
