fix: fixed partners images with responsive css

--- a/index.html
+++ b/index.html
@@ -423,79 +423,79 @@
             <div class="partners-grid">
                 <a href="https://www.instagram.com/sebrae/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                    <img src="assets/partners/SebraeLogo.png" alt="Sebrae" width="100%">
+                    <img src="assets/partners/SebraeLogo.png" alt="Sebrae">
                     </div>
                     <h3 class="partners-tier">Sebrae</h3>
                 </a>
                 <a href="https://www.instagram.com/acianf/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/AcianfLogo.png" alt="ACIANF" width="100%">
+                        <img src="assets/partners/AcianfLogo.png" alt="ACIANF">
                     </div>
                     <h3 class="partners-tier">ACIANF</h3>
                 </a>
                 <a href="https://www.instagram.com/frionline/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/FriOnlineLogo.png" width="100%">
+                        <img src="assets/partners/FriOnlineLogo.png">
                     </div>
                     <h3 class="partners-tier">Fri Online</h3>
                 </a>
                 <a href="https://www.instagram.com/unimedserranarj/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/UnimedLogo.png" alt="Unimed" width="100%">
+                        <img src="assets/partners/UnimedLogo.png" alt="Unimed">
                     </div>
                     <h3 class="partners-tier">Unimed</h3>
                 </a>
                 <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/ConventionLogo.png" alt="Convention" width="100%">
+                        <img src="assets/partners/ConventionLogo.png" alt="Convention">
                     </div>
                     <h3 class="partners-tier">Convention</h3>
                 </a>
                 <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/InterTvLogo.webp" alt="Convention" width="100%">
+                        <img src="assets/partners/InterTvLogo.webp" alt="Convention">
                     </div>
                     <h3 class="partners-tier">InterTV</h3>
                 </a>
                 <a href="https://www.instagram.com/friburgofm/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/FriburgoFmLogo.webp" alt="Friburgo FM" width="100%">
+                        <img src="assets/partners/FriburgoFmLogo.webp" alt="Friburgo FM">
                     </div>
                     <h3 class="partners-tier">Friburgo FM</h3>
                 </a>
                 <a href="https://www.instagram.com/concessionariarota116/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/Rota116Logo.png" alt="Rota 116" width="100%">
+                        <img src="assets/partners/Rota116Logo.png" alt="Rota 116">
                     </div>
                     <h3 class="partners-tier">Rota 116</h3>
                 </a>
                 <a href="https://www.instagram.com/faol_oficial/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/FaolLogo.svg" alt="FAOL" width="100%">
+                        <img src="assets/partners/FaolLogo.svg" alt="FAOL">
                     </div>
                     <h3 class="partners-tier">FAOL</h3>
                 </a>
                 <a href="https://www.instagram.com/rg.criativa/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/RgCriativaLogo.svg" alt="RG Criativa" width="100%">
+                        <img src="assets/partners/RgCriativaLogo.svg" alt="RG Criativa">
                     </div>
                     <h3 class="partners-tier">RG Criativa</h3>
                 </a>
                 <a href="https://www.instagram.com/prefeituranovafriburgo/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/PrefeituraLogo.jpg" alt="PMNF" width="100%">
+                        <img src="assets/partners/PrefeituraLogo.jpg" alt="PMNF">
                     </div>
                     <h3 class="partners-tier">Prefeitura de Nova Friburgo</h3>
                 </a>
                 <a href="https://www.instagram.com/nfcountryclube/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/NfccLogo.png" alt="NFCC" width="100%">
+                        <img src="assets/partners/NfccLogo.png" alt="NFCC">
                     </div>
                     <h3 class="partners-tier">Country Clube</h3>
                 </a>
                 <a href="https://www.instagram.com/facerj_/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                        <img src="assets/partners/FacerjLogo.png" alt="FACERJ" width="100%">
+                        <img src="assets/partners/FacerjLogo.png" alt="FACERJ">
                     </div>
                     <h3 class="partners-tier">FACERJ</h3>
                 </a>
